# building-intelligence

./: .gitlab-ci.yml  404.html  README.md  blog.html  compose.yaml  devices-example.yaml  docker-example.env  index.html  influxdb_mapping-example.yaml  markdown-page.html  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yaml
assets/js/: 060bf03e.4c1d302b.js  060bf03e.86bd1a38.js  076afb6a.2de132f1.js  0d338f96.5c7ff692.js  0e384e19.20681118.js  0e384e19.2f4b8740.js  0e384e19.79d157a2.js  0e384e19.e67efcc7.js  17896441.036a621e.js  17896441.1c98c063.js  1cfacdc0.43a6970f.js  1cfacdc0.e095f3cf.js  1df93b7f.7f457492.js  1e5aa1ba.0557ffa4.js  1e5aa1ba.22ad808d.js  1ef4d142.9134db2b.js  1f391b9e.ea51603b.js  1fb17edf.5fb518e1.js  20ff4260.39bb1c0a.js  219e4375.fa10be13.js  2ae5a193.ee6f6145.js  33b54c50.b8e0e00e.js  33fc5bb8.edec09b1.js  393be207.81b889f1.js  3f93576b.f6b3d87f.js  50cd3923.712a66dd.js  53aefa42.7d3bed98.js  53aefa42.8271d3ae.js  54269668.8d7c29ab.js  54c729cf.618708b3.js  59362658.1a5f33ab.js  59362658.9992d20e.js  60f30f2a.514e6593.js  (+71 more)
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
common/: README.md  pyproject.toml
common/src/common/: __init__.py
common/src/common/database/: __init__.py  influxdb.py  redis.py
common/src/common/device/: __init__.py  helper.py
common/src/common/util/: __init__.py  logging.py
core-api/: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
core-api/src/core_api/: __init__.py  app.py
core-api/src/core_api/api/: __init__.py  building.py  devices.py  forecast_data.py  historic_data.py  models.py  preferences_data.py  weather_data.py
core-api/src/core_api/database/: __init__.py  forecast_queries.py  historic_queries.py  preferences_queries.py  weather_queries.py
core-api/src/core_api/device/: __init__.py  helper.py  historical.py  realtime.py
core-api/src/core_api/html/: root.html
core-api/src/core_api/schedule/: __init__.py  device_scheduler.py  models.py  monitor.py  weekly_scheduler.py
core-api/tests/: test_weekly_schedule.py
data-engine/: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
data-engine/src/data_engine/: __init__.py  app.py
data-engine/src/data_engine/database/: RetrieveDataForCloud.py  __init__.py  influx_mirror.py
data-engine/src/data_engine/device/: __init__.py  device_type.py
data-engine/src/data_engine/events/: __init__.py  forecaster_rpc_answer.py
data-engine/src/data_engine/forecaster/: __init__.py  forecast_retriever.py
data-engine/src/data_engine/grap/: __init__.py  detect_blackout.py
data-engine/src/data_engine/html/: root.html
data-engine/src/data_engine/telemetry/: telemetry_sender.py
docs/: intro.html
frontend/: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
frontend/src/frontend/: __init__.py  app.py
frontend/src/frontend/database/: __init__.py  redis_yaml_saver.py
frontend/src/frontend/static/: scripts.js  styles.css
frontend/src/frontend/templates/: coordinator.html  index.html  mpc.html  priorities.html
grid-services-api/: Dockerfile  README.md  pyproject.toml
grid-services-api/src/grid_services_api/: __init__.py  app.py
grid-services-api/src/grid_services_api/api/: __init__.py  day_ahead.py  direct_control.py  flexibility.py  models.py  mpc.py  paid_control.py  publisher.py  tariffs.py
grid-services-api/src/grid_services_api/html/: root.html
ha-device-interface/: Dockerfile  pyproject.toml
ha-device-interface/src/ha_device_interface/: __init__.py  app.py
ha-device-interface/src/ha_device_interface/control/: __init__.py  interface.py  subscriber.py
ha-device-interface/tests/: test_interface.py
initializers/: .gitlab-ci.yml  Dockerfile  pyproject.toml
initializers/src/initializers/: __init__.py  app.py
initializers/src/initializers/database/: __init__.py  influx_init.py  redis_yaml_saver.py
initializers/src/initializers/device/: __init__.py  device.py
initializers/src/initializers/grid_functions_config/: __init__.py  grid_service_grap.yaml
initializers/src/initializers/labels_dbs_config/: __init__.py  labels_apis.yaml  labels_channels.yaml  labels_market.yaml  labels_measures.yaml  labels_redis.yaml
initializers/src/initializers/user/: ProfileGenerators.py  __init__.py  redis_data_initializer.py
(+70 files in other folders)
