[tool.poetry]
name = "data-engine"
version = "0.0.1"
description = "Performs multiple tasks related to the data management."
authors = ["Hydro-Québec <hydroquebec@hydroquebec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
prophet = "^1.1.5"
numpy = "<2"
faststream = "^0.5.25"
cvxpy = "^1.5.3"
apscheduler = "^3.10.4"
common = { path = "../common", develop = true }
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
