[tool.poetry]
name = "grid-services-api"
version = "0.0.1"
description = ""
authors = ["Hydr-Québec <hydroquebec@hydroquebec.com>"]
readme = "README.md"
packages = [{include = "grid_services_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
common = { path = "../common", develop = true }
faststream = "^0.5.30"
pydantic = "^2.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
